--- a/orange.html
+++ b/orange.html
@@ -9,5 +9,6 @@
 <body>
     <h1 style="color: #f90">The Orange Page</h1>
     <p>Orange is so great it has a <span style="color: #f90">fruit</span>named after it</p>
+    <p><a href="index.html">Return to home page<a></p>
 </body>
 </html>
